--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@ limitations under the License.
               <img src="logotext.svg" id="nav-logo-img" alt="logo">
             </div>
           </div>
-	    <div class="demo flowchart-demo" id="sheet">
-          </div>
+	  <div class="nodesbar"></div>
+	  <div class="demo flowchart-demo" id="sheet"></div>
         </div>
   </body>
 </html>
